--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
-bin-debug
+/.settings/*
+
+/html-template/*
+/bin-debug/*
+/bin-release/*
+/bin/*
+docs/*
+obj/*
+
+.actionScriptProperties
+.flexProperties
+.flexLibProperties
+.FlexUnitSettings
+.project
+
+Icon
+Thumbs.db
+.DS_Store
+dist/*
+report/*
+doc/*
+
+src/FlexUnitApplication.mxml
